# banjo-pc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  build.sh
banjo/BGS/: code_3030.c  code_3420.c  code_8DF0.c  code_9750.c  crc.c
banjo/CC/: code_0.c  code_13C0.c  code_19B0.c  code_1B90.c  code_1F70.c  code_3400.c  code_530.c  code_BF0.c  crc.c
banjo/CCW/: code_0.c  code_14B0.c  code_160.c  code_1B20.c  code_21A0.c  code_2270.c  code_2B00.c  code_3050.c  code_3310.c  code_3DA0.c  code_4530.c  code_4960.c  code_4D00.c  code_50D0.c  code_5540.c  code_5BF0.c  code_61E0.c  code_6620.c  code_6AC0.c  code_6EC0.c  code_7120.c  code_7570.c  code_76C0.c  code_7BC0.c  code_7BF0.c  code_950.c
banjo/FP/: code_19E0.c  code_1FF0.c  code_A1C0.c  code_ABD0.c  code_B4D0.c
banjo/GV/: code_2EE0.c  code_3630.c  code_3AA0.c  code_3B10.c  code_3BB0.c  code_3D90.c  code_43B0.c  code_4740.c  code_5570.c  code_61E0.c  code_6370.c  code_6F80.c  code_7060.c  code_7D50.c  code_7DB0.c  code_7FC0.c  code_7FF0.c  code_9B70.c  code_9C10.c  matchinggame.c  waterctrl.c
banjo/MM/: code_24C0.c  crc.c
banjo/MMM/: code_16B0.c  code_2040.c  code_2F60.c  code_3120.c  code_3420.c  code_3D50.c  code_47D0.c  code_5000.c  code_DC0.c  crc.c
banjo/RBB/: code_1570.c  code_640.c  code_9670.c  code_9840.c  code_CA0.c  propellorctrl.c
banjo/SM/: code_0.c  code_2900.c  code_3FC0.c  code_44D0.c  code_46C0.c  code_46C0.us.v10.c  code_5B0.c  code_BF0.c  code_F0.c
banjo/TTC/: code_26D0.c  code_3040.c
banjo/core1/: bamotor.c  code_0.c  code_11AC0.c  code_15B30.c  code_1D00.c  code_1D5D0.c  code_3250.c  code_5650.c  code_660.c  code_7090.c  code_72B0.c  code_7F60.c  code_8C50.c  code_CE60.c  crccalc.c  debugtext.c  defragmanager.c  depthbuffer.c  eeprom.c  framebufferdraw.c  inflate.c  initthread.c  ll.c  ll_cvt.c  lookup.c  memory.c  ml.c  mlmtx.c  musicplayer.c  overlay.c  overlaymanager.c  pfsmanager.c  pimanager.c  sns.c  sprite.c  stub_13640.c  stub_1D590.c  stub_2FA0.c  stub_3A70.c  syncprintf.c  (+3 more)
banjo/core2/: abilityprogress.c  anctrl.c  animcache.c  animtexturecache.c  anseq.c  babuzz.c  baeyes.c  baflag.c  bainput.c  bakey.c  basfx.c  bastick.c  batimer.c  bsList.c  bsStoredState.c  climb.c  code_11040.c  code_11460.c  code_11660.c  code_117D0.c  code_11870.c  code_12360.c  code_12F30.c  code_13780.c  code_13A00.c  code_14420.c  code_1550.c  code_15F20.c  code_16C60.c  code_2240.c  code_33250.c  code_33310.c  code_336F0.c  code_33AB0.c  code_33C30.c  code_33F90.c  code_34310.c  code_34790.c  code_35520.c  code_379B0.c  (+213 more)
banjo/cutscenes/: code_0.c  code_60F0.c  code_6730.c  code_69F0.c  code_6C90.c
banjo/done/: bk_boot_1050.c  cartrominit.c  createmesgqueue.c  createthread.c  destroythread.c  devmgr.c  epirawdma.c  getthreadpri.c  inflate.c  initialize.c  leointerrupt.c  ll.c  overlays.c  pigetstat.c  pimgr.c  pirawdma.c  pirawread.c  rarezip.c  recvmesg.c  sendmesg.c  setthreadpri.c  si.c  sirawwrite.c  startthread.c  yieldthread.c
banjo/fight/: chbossjinjo.c  chbossjinjobase.c  chbossshadow.c  chfinalboss.c  chgreenblast.c  chjinjonator.c  chjinjonatorbase.c  chspellbarrier.c  chspellfireball.c  chstonejinjo.c  fight.c
banjo/include/: assets.h  bool.bak.h  bsint.h  functions.h  model.h  music.h  n_synth.h  osint.h  piint.h  prop.h  rand.h  rarezip.h  structs.h  time.h  (+3 more)
include/: libaudio.h  libaudio_pch.h  n64_compat.h  n_libaudio.h  n_ucode.h  os_system.h
src/: fast_wrapper.cpp  fast_wrapper.h  main.c
(+429 files in other folders)
